--- a/src/main/resources/com.main.game/ChoiceGameUI.fxml
+++ b/src/main/resources/com.main.game/ChoiceGameUI.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="453.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.MathController">
+<AnchorPane prefHeight="400.0" prefWidth="453.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.ChoiceController">
    <children>
       <Button id="next_button" layoutX="201.0" layoutY="340.0" mnemonicParsing="false" text="Next" />
       <Label id="question_label" alignment="CENTER" layoutX="55.0" layoutY="135.0" prefHeight="106.0" prefWidth="342.0" textAlignment="CENTER" wrapText="true">
