--- a/src/main/resources/com/example/pdproject/NameEntryView.fxml
+++ b/src/main/resources/com/example/pdproject/NameEntryView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: FFDE59;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.NameEntryView">
+<AnchorPane fx:id="nameEntryAnchor" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: FFDE59;" stylesheets="@Styles.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.NameEntryView">
    <children>
       <Pane id="btnN" layoutX="197.0" layoutY="53.0" prefHeight="144.0" prefWidth="888.0" styleClass="anchorPaneMainTopic" stylesheets="@Styles.css">
          <children>
@@ -19,12 +19,12 @@
             </ImageView>
          </children>
       </Pane>
-      <TextField id="nameEntry" alignment="CENTER" layoutX="323.0" layoutY="345.0" prefHeight="95.0" prefWidth="635.0" promptText="Name" style="-fx-border-width: 3; -fx-background-radius: 28;">
+      <TextField id="nameEntry" fx:id="nameEntryText" alignment="CENTER" layoutX="323.0" layoutY="345.0" prefHeight="95.0" prefWidth="635.0" promptText="Name" style="-fx-border-width: 3; -fx-background-radius: 28;">
          <font>
             <Font size="44.0" />
          </font>
       </TextField>
-      <Button id="btnProceed" layoutX="483.0" layoutY="469.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="314.0" style="-fx-background-color: f96b70; -fx-border-color: f96b70;" styleClass="btnProceed" stylesheets="@Styles.css" text="PROCEED" textFill="WHITE">
+      <Button id="btnProceedName" fx:id="btnProceedName" layoutX="483.0" layoutY="469.0" mnemonicParsing="false" onAction="#onLoadScene" prefHeight="53.0" prefWidth="314.0" stylesheets="@Styles.css" text="PROCEED" textFill="WHITE">
          <font>
             <Font name="System Bold" size="35.0" />
          </font>
