--- a/src/main/resources/com/example/pdproject/TopicMenuView.fxml
+++ b/src/main/resources/com/example/pdproject/TopicMenuView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,48 +8,12 @@
 
 <AnchorPane fx:id="topicViewAnchor" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #3ceffe;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.TopicMenuController">
    <children>
-      <Pane id="anchorPaneMain" layoutX="204.0" layoutY="49.0" prefHeight="157.0" prefWidth="872.0" stylesheets="@Styles.css">
-         <children>
-            <ImageView fitHeight="110.0" fitWidth="845.0" layoutX="14.0" layoutY="24.0">
-               <image>
-                  <Image url="@../Images/ChooseYourTopic.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Pane>
-      <Pane id="anchorPaneMainTopic" layoutX="491.0" layoutY="279.0" prefHeight="300.0" prefWidth="300.0" stylesheets="@Styles.css">
-         <children>
-            <ImageView id="topicanchor" fitHeight="300.0" fitWidth="300.0">
-               <image>
-                  <Image url="@../Images/generalTopic.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Pane>
-      <Pane id="anchorPaneMainTopic" layoutX="153.0" layoutY="279.0" prefHeight="300.0" prefWidth="300.0" stylesheets="@Styles.css">
-         <children>
-            <ImageView id="topicanchor" fitHeight="300.0" fitWidth="300.0">
-               <image>
-                  <Image url="@../Images/mathTopic.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Pane>
-      <Pane id="anchorPaneMainTopic" layoutX="828.0" layoutY="279.0" prefHeight="300.0" prefWidth="300.0" stylesheets="@Styles.css">
-         <children>
-            <ImageView id="topicanchor" fitHeight="300.0" fitWidth="300.0">
-               <image>
-                  <Image url="@../Images/englishTopic.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Pane>
       <ImageView fitHeight="56.0" fitWidth="178.0" layoutX="213.0" layoutY="604.0">
          <image>
             <Image url="@../Images/mathLabelTopic.PNG" />
          </image>
       </ImageView>
-      <ImageView fitHeight="56.0" fitWidth="240.0" layoutX="520.0" layoutY="604.0">
+      <ImageView fitHeight="56.0" fitWidth="240.0" layoutX="530.0" layoutY="604.0">
          <image>
             <Image url="@../Images/generalLabelTopic.PNG" />
          </image>
@@ -58,5 +23,45 @@
             <Image url="@../Images/englishLabelTopic.PNG" />
          </image>
       </ImageView>
+      <AnchorPane layoutX="172.0" layoutY="305.0">
+         <children>
+            <Button id="clickTopic" fx:id="btnEnglishTopic" contentDisplay="CENTER" layoutX="676.0" mnemonicParsing="false" onAction="#onChooseEnglish" prefHeight="260.0" prefWidth="260.0" style="-fx-background-insets: 0 0 2 0;" stylesheets="@Styles.css">
+               <graphic>
+                  <ImageView fitHeight="210.0" fitWidth="210.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Images/englishTopic.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button id="clickTopic" fx:id="btnMathTopic" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onChooseMath" prefHeight="260.0" prefWidth="260.0" style="-fx-background-insets: 0 0 2 0;" stylesheets="@Styles.css">
+               <graphic>
+                  <ImageView fitHeight="210.0" fitWidth="210.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Images/mathTopic.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button id="clickTopic" fx:id="btnGeneralTopic" contentDisplay="CENTER" layoutX="338.0" mnemonicParsing="false" onAction="#onChooseGeneral" prefHeight="260.0" prefWidth="260.0" style="-fx-background-insets: 0 0 2 0;" stylesheets="@Styles.css">
+               <graphic>
+                  <ImageView fitHeight="210.0" fitWidth="210.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Images/generalTopic.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+         </children>
+      </AnchorPane>
+      <Pane id="anchorPaneMain" layoutX="204.0" layoutY="49.0" prefHeight="157.0" prefWidth="872.0" stylesheets="@Styles.css">
+         <children>
+            <ImageView fitHeight="110.0" fitWidth="845.0" layoutX="14.0" layoutY="24.0">
+               <image>
+                  <Image url="@../Images/ChooseYourTopic.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
