Connected and fixed controllers and fxml, changed some designs on buttons and cleaned.

--- a/src/main/resources/com/example/pdproject/Styles.css
+++ b/src/main/resources/com/example/pdproject/Styles.css
@@ -197,4 +197,5 @@
 #clickTopic:hover{
     -fx-background-color: linear-gradient(#eeeeee, #ffffff);
     -fx-text-fill:white;
-    -fx-font-weight:bold;}
+    -fx-font-weight:bold;
+    }
