--- a/src/main/resources/com/example/pdproject/MathQuizView.fxml
+++ b/src/main/resources/com/example/pdproject/MathQuizView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mathQuizAnchor" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #67DF6F;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.MathQuizController">
+<AnchorPane fx:id="topicQuizAnchor" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #67DF6F;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.ChoiceController">
     <children>
         <AnchorPane id="anchorPaneMainTopic" layoutX="80.0" layoutY="99.0" prefHeight="183.0" prefWidth="1120.0" stylesheets="@Styles.css">
             <children>
