--- a/src/main/resources/com/example/pdproject/highScoreView.fxml
+++ b/src/main/resources/com/example/pdproject/highScoreView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="highScoreAnchor" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #7C91FE;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.HighScoreController">
@@ -14,18 +15,10 @@
             <URL value="@Styles2.css" />
          </stylesheets>
          <children>
+            <VBox fx:id="name_field" alignment="TOP_CENTER" layoutX="123.0" layoutY="98.0" prefHeight="414.0" prefWidth="258.0" />
             <Label alignment="CENTER" layoutX="159.0" layoutY="30.0" prefHeight="62.0" prefWidth="187.0" style="-fx-text-fill: #FFD54F;" styleClass="titleLabel" stylesheets="@Styles2.css" text="NAME:" />
-            <Label fx:id="playerName" alignment="CENTER" layoutX="199.0" layoutY="92.0" prefHeight="99.0" prefWidth="108.0" styleClass="text-style" stylesheets="@Styles2.css" text="N/A" textAlignment="CENTER">
-               <font>
-                  <Font size="42.0" />
-               </font>
-            </Label>
             <Label alignment="CENTER" layoutX="452.0" layoutY="30.0" prefHeight="62.0" prefWidth="187.0" style="-fx-text-fill: #FFD54F;" styleClass="titleLabel" stylesheets="@Styles2.css" text="SCORE:" />
-            <Label fx:id="scoreResult" alignment="CENTER" layoutX="492.0" layoutY="92.0" prefHeight="99.0" prefWidth="108.0" styleClass="text-style" stylesheets="@Styles2.css" text="N/A" textAlignment="CENTER">
-               <font>
-                  <Font size="42.0" />
-               </font>
-            </Label>
+            <VBox fx:id="score_field" alignment="TOP_CENTER" layoutX="416.0" layoutY="92.0" prefHeight="414.0" prefWidth="258.0" />
          </children>
       </AnchorPane>
       <Label alignment="CENTER" layoutX="319.0" layoutY="16.0" prefHeight="62.0" prefWidth="652.0" style="-fx-text-fill: FFFFFF; -fx-font-size: 60;" styleClass="titleLabel" stylesheets="@Styles2.css" text="H I G H S C O R E S">
