--- a/src/main/resources/com/example/pdproject/GeneralQuizView.fxml
+++ b/src/main/resources/com/example/pdproject/GeneralQuizView.fxml
@@ -6,12 +6,19 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="topicQuizAnchor" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #00e6e6;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.ChoiceController">
    <children>
+      <ImageView fitHeight="720.0" fitWidth="1280.0" layoutX="20.0" layoutY="322.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <image>
+            <Image url="@../Images/generalBackground.png" />
+         </image>
+      </ImageView>
       <AnchorPane id="anchorPaneMainTopic" layoutX="80.0" layoutY="99.0" prefHeight="183.0" prefWidth="1120.0" stylesheets="@Styles.css">
          <children>
             <Label layoutX="450.0" layoutY="14.0" styleClass="questionLabel" text="Question" />
