--- a/src/main/resources/com/example/pdproject/MathQuizView.fxml
+++ b/src/main/resources/com/example/pdproject/MathQuizView.fxml
@@ -6,12 +6,19 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="topicQuizAnchor" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #67DF6F;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.ChoiceController">
     <children>
+      <ImageView fitHeight="720.0" fitWidth="1280.0" layoutX="56.0" layoutY="331.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../Images/mathBackground.png" />
+         </image>
+      </ImageView>
         <AnchorPane id="anchorPaneMainTopic" layoutX="80.0" layoutY="99.0" prefHeight="183.0" prefWidth="1120.0" stylesheets="@Styles.css">
             <children>
                 <Label layoutX="450.0" layoutY="14.0" style="-fx-text-fill: #fc6f6f;" styleClass="questionLabel" text="Question" textFill="#fc6f6f" />
@@ -25,7 +32,7 @@
         </AnchorPane>
         <Pane layoutX="481.0" layoutY="368.0" prefHeight="208.0" prefWidth="357.0">
             <children>
-                <ToggleButton id="btnChoice1" fx:id="btn_A" alignment="CENTER_LEFT" layoutX="-37.0" layoutY="-10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="380.0" styleClass="toggleChoiceGroup" stylesheets="@Styles.css" text="ToggleButton">
+                <ToggleButton fx:id="btn_A" alignment="CENTER_LEFT" layoutX="-37.0" layoutY="-10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="380.0" styleClass="toggleChoiceGroup" stylesheets="@Styles.css" text="ToggleButton">
                     <toggleGroup>
                         <ToggleGroup fx:id="toggleChoiceGroup" />
                     </toggleGroup>
@@ -43,7 +50,7 @@
                         <Insets left="-3.0" />
                     </padding>
                 </ToggleButton>
-                <ToggleButton id="btnChoice2" fx:id="btn_B" alignment="CENTER_LEFT" layoutX="-37.0" layoutY="66.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="380.0" styleClass="toggleChoiceGroup" stylesheets="@Styles.css" text="ToggleButton" toggleGroup="$toggleChoiceGroup">
+                <ToggleButton fx:id="btn_B" alignment="CENTER_LEFT" layoutX="-37.0" layoutY="66.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="380.0" styleClass="toggleChoiceGroup" stylesheets="@Styles.css" text="ToggleButton" toggleGroup="$toggleChoiceGroup">
                     <graphic>
                         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="58.0" prefWidth="56.0" style="-fx-background-color: #fc6f6f; -fx-background-radius: 10 0 0 10; -fx-border-color: #555555; -fx-border-width: 3; -fx-border-radius: 5 0 0 5;" text="b.">
                             <font>
@@ -58,7 +65,7 @@
                         <Insets left="-3.0" />
                     </padding>
                 </ToggleButton>
-                <ToggleButton id="btnChoice3" fx:id="btn_C" alignment="CENTER_LEFT" layoutX="-37.0" layoutY="138.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="380.0" styleClass="toggleChoiceGroup" stylesheets="@Styles.css" text="ToggleButton" toggleGroup="$toggleChoiceGroup">
+                <ToggleButton fx:id="btn_C" alignment="CENTER_LEFT" layoutX="-37.0" layoutY="138.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="380.0" styleClass="toggleChoiceGroup" stylesheets="@Styles.css" text="ToggleButton" toggleGroup="$toggleChoiceGroup">
                     <graphic>
                         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="58.0" prefWidth="56.0" style="-fx-background-color: #fc6f6f; -fx-background-radius: 10 0 0 10; -fx-border-color: #555555; -fx-border-width: 3; -fx-border-radius: 5 0 0 5;" text="c.">
                             <font>
