--- a/src/main/resources/com/example/pdproject/NameEntryView.fxml
+++ b/src/main/resources/com/example/pdproject/NameEntryView.fxml
@@ -10,6 +10,11 @@
 
 <AnchorPane fx:id="nameEntryAnchor" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: FFDE59;" stylesheets="@Styles.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.Game.NameEntryView">
    <children>
+      <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Images/yellowBackground.png" />
+         </image>
+      </ImageView>
       <Pane id="btnN" layoutX="197.0" layoutY="53.0" prefHeight="144.0" prefWidth="888.0" styleClass="anchorPaneMainTopic" stylesheets="@Styles.css">
          <children>
             <ImageView fitHeight="66.0" fitWidth="696.0" layoutX="96.0" layoutY="39.0">
