--- a/src/main/resources/com/example/pdproject/Styles2.css
+++ b/src/main/resources/com/example/pdproject/Styles2.css
@@ -21,6 +21,10 @@
     -fx-stroke-width: 2px;
 }
 
+.long-text {
+    -fx-overflow-wrap: break-word;
+}
+
 .text-style {
     -fx-font-family: "Helvetica Neue", Arial, sans-serif;
     -fx-font-size: 40px;
@@ -48,5 +52,28 @@
 }
 
 #buttonProceed:hover {
-    -fx-transform: scale(2);
+     -fx-scale-x: 1.1;
+     -fx-scale-y: 1.1;
+     -fx-transition: -fx-scale-x 1s, -fx-scale-y 1s;
+}
+
+#btnBack {
+    -fx-font-family: "Helvetica Neue", Arial, sans-serif;
+    -fx-font-size: 30px;
+    -fx-text-fill: #FF7799;
+    -fx-stroke: black;
+    -fx-stroke-width: 2px;
+    -fx-font-weight: bold;
+
+    -fx-background-color: #FFFFFF;
+    -fx-padding: 8px 16px;
+    -fx-background-radius: 25px;
+    -fx-background-insets: 3 3 3 3;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 7, 0, 3, 3);
+}
+
+#btnBack:hover {
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+    -fx-transition: -fx-scale-x 1s, -fx-scale-y 1s;
 }
